override display: table

--- a/all_static/css/js-splash.css
+++ b/all_static/css/js-splash.css
@@ -342,7 +342,7 @@ there.
 
 
   .js-splash--navigation-inline {
-    display: block;
+    display: block !important;
   }
 
   .js-splash--navigation-sidebar {
