--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -1,31 +1,39 @@
+{% comment %}First, check which sections this page should contain checking all of the posts{% endcomment %}
 {% for page in languagelistimg %}
-{% if page.display_as == "chart_type" %}
-{% assign chart_type = true %}
-{% elsif page.display_as == "advanced_charts" %}
-{% assign advanced_charts = true %}
-{% elsif page.display_as == "maps" %}
-{% assign maps = true %}
-{% elsif page.display_as == "chart_events" %}
-{% assign chart_events = true %}
-{% elsif page.display_as == "3d_charts" %}
-{% assign 3d_charts = true %}
-{% elsif page.display_as == "financial_analysis" %}
-{% assign financial_analysis = true %}
-{% elsif page.display_as == "multiple_axes" %}
-{% assign multiple_axes = true %}
-{% endif %}
+	{% if page.display_as == "chart_type" or page.display_as == "basic" %}
+		{% assign chart_type = true %}
+	{% elsif page.display_as == "advanced_charts"%}
+		{% assign advanced_charts = true %}
+	{% elsif page.display_as == "maps" %}
+		{% assign maps = true %}
+	{% elsif page.display_as == "chart_events" %}
+		{% assign chart_events = true %}
+	{% elsif page.display_as == "3d_charts" %}
+		{% assign 3d_charts = true %}
+	{% elsif page.display_as == "financial_analysis" %}
+		{% assign financial_analysis = true %}
+	{% elsif page.display_as == "multiple_axes" %}
+		{% assign multiple_axes = true %}
+	{% elsif page.display_as == "scientific" %}
+		{% assign scientific = true %}
+	{% elsif page.display_as == "statistical" %}
+		{% assign statistical = true %}
+	{% elsif page.display_as == "financial" %}
+		{% assign financial = true %}
+	{% endif %}
 {% endfor %}
 
+{% comment %} these are the pages that don't have images to show {% endcomment %}
 {% for page in languagelist %}
-{% if page.display_as == "layout_opt" %}
-{% assign layout_options = true %}
-{% elsif page.display_as == "file_settings" %}
-{% assign file_settings = true %}
-{% elsif page.display_as == "tutorial" %}
-{% assign tutorial = true %}
-{% elsif page.display_as == "get_request" %}
-{% assign get_request = true %}
-{% endif %}
+	{% if page.display_as == "layout_opt" %}
+		{% assign layout_options = true %}
+	{% elsif page.display_as == "file_settings" %}
+		{% assign file_settings = true %}
+	{% elsif page.display_as == "tutorial" %}
+		{% assign tutorial = true %}
+	{% elsif page.display_as == "get_request" %}
+		{% assign get_request = true %}
+	{% endif %}
 {% endfor %}
 
 
@@ -60,12 +68,12 @@
 {% for page in languagelistimg %}
 {% if page.display_as == "maps" %}
 <a href="/{{page.permalink}}">
-<div class="alltutcol">
-<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-<div class="titlecenter">
-<h5 class="centered"> {{page.name}} </h5>
-</div>
-</div>
+	<div class="alltutcol">
+		<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+		<div class="titlecenter">
+			<h5 class="centered"> {{page.name}} </h5>
+		</div>
+	</div>
 </a>
 {% endif %}
 {% endfor %}
@@ -75,18 +83,18 @@
 {% if 3d_charts %}
 <hr>
 <h4 class="example-section-title" id="3d-charts">
-<a class="no_underline plot-blue" href="#3d-charts">3d Charts</a>
+<a class="no_underline plot-blue" href="#3d-charts">3D Charts</a>
 </h4>
 <div class="row">
 {% for page in languagelistimg %}
 {% if page.display_as == "3d_charts" %}
 <a href="/{{page.permalink}}">
-<div class="alltutcol">
-<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-<div class="titlecenter">
-<h5 class="centered"> {{page.name}} </h5>
-</div>
-</div>
+	<div class="alltutcol">
+		<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+		<div class="titlecenter">
+			<h5 class="centered"> {{page.name}} </h5>
+		</div>
+	</div>
 </a>
 {% endif %}
 {% endfor %}
@@ -100,12 +108,12 @@
 {% for page in languagelistimg %}
 {% if page.display_as == "financial_analysis" %}
 <a href="/{{page.permalink}}">
-<div class="alltutcol">
-<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-<div class="titlecenter">
-<h5 class="centered"> {{page.name}} </h5>
-</div>
-</div>
+	<div class="alltutcol">
+	<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+		<div class="titlecenter">
+			<h5 class="centered"> {{page.name}} </h5>
+		</div>
+	</div>
 </a>
 {% endif %}
 {% endfor %}
@@ -119,12 +127,12 @@
 {% for page in languagelistimg %}
 {% if page.display_as == "multiple_axes" %}
 <a href="/{{page.permalink}}">
-<div class="alltutcol">
-<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-<div class="titlecenter">
-<h5 class="centered"> {{page.name}} </h5>
-</div>
-</div>
+	<div class="alltutcol">
+		<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+		<div class="titlecenter">
+			<h5 class="centered"> {{page.name}} </h5>
+		</div>
+	</div>
 </a>
 <div class="{% cycle 'group 2': '', '', 'three-column-clear', '', 'five-column-clear' %}"></div>
 {% endif %}
@@ -138,10 +146,10 @@
 <div class="row">
 {% if page.language == "matlab" %}<a href="/matlab/streaming-tutorial/">{% elsif page.language == "python"%}<a href="/python/streaming-tutorial/">{% endif %}
 <div class="alltutcol">
-<img class="thumbnail" alt="Streaming" src="{{site.staticurl}}/images/streaming.gif" >
-<div class="titlecenter">
-<h5 class="centered"> Real-Time Streaming </h5>
-</div>
+	<img class="thumbnail" alt="Streaming" src="{{site.staticurl}}/images/streaming.gif" >
+		<div class="titlecenter">
+			<h5 class="centered"> Real-Time Streaming </h5>
+		</div>
 </div>
 </a>
 </div>
@@ -159,12 +167,12 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 {% for page in languagelistimg %}
 {% if page.display_as == "chart_events" %}
 <a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
-<div class="alltutcol">
-<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-<div class="titlecenter">
-<h5 class="centered"> {{page.name}} </h5>
-</div>
-</div>
+	<div class="alltutcol">
+		<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+			<div class="titlecenter">
+			<h5 class="centered"> {{page.name}} </h5>
+		</div>
+	</div>
 </a>
 {% endif %}
 {% endfor %}
