break out plotly.js examples into a few sections

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -46,7 +46,7 @@
 </h4>
 <div class="row">
 {% for page in languagelistimg %}
-{% if page.display_as == "chart_type" %}
+{% if page.display_as == "chart_type" or page.display_as == "basic" %}
 <a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
   <div class="alltutcol">
     <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}">
@@ -55,7 +55,51 @@
       </div>
   </div>
 </a>
-<div class="{% cycle '', '', '', '', 'five-column-clear' %}"></div>
+<div class="{% cycle 'basic-clear: ' '', '', '', '', 'five-column-clear' %}"></div>
+{% endif %}
+{% endfor %}
+</div>
+{% endif %}
+
+{% if statistical %}
+<hr class="example-section-break">
+<h4 class="example-section-title" id="statistical">
+	<a class="no_underline plot-blue" href="#statistical">Statistical Charts</a>
+</h4>
+<div class="row">
+{% for page in languagelistimg %}
+{% if page.display_as == "statistical" %}
+<a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
+  <div class="alltutcol">
+    <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}">
+      <div class="titlecenter">
+        <h5 class="centered"> {{page.name}} </h5>
+      </div>
+  </div>
+</a>
+<div class="{% cycle 'statistical-clear: ' '', '', '', '', 'five-column-clear' %}"></div>
+{% endif %}
+{% endfor %}
+</div>
+{% endif %}
+
+{% if scientific %}
+<hr class="example-section-break">
+<h4 class="example-section-title" id="statistical">
+	<a class="no_underline plot-blue" href="#statistical">Scientific Charts</a>
+</h4>
+<div class="row">
+{% for page in languagelistimg %}
+{% if page.display_as == "scientific" %}
+<a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
+  <div class="alltutcol">
+    <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}">
+      <div class="titlecenter">
+        <h5 class="centered"> {{page.name}} </h5>
+      </div>
+  </div>
+</a>
+<div class="{% cycle 'scientific-clear: ' '', '', '', '', 'five-column-clear' %}"></div>
 {% endif %}
 {% endfor %}
 </div>
