--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -105,6 +105,28 @@
 </div>
 {% endif %}
 
+{% if financial %}
+<hr class="example-section-break">
+<h4 class="example-section-title" id="financial">
+	<a class="no_underline plot-blue" href="#financial">Financial Charts</a>
+</h4>
+<div class="row">
+{% for page in languagelistimg %}
+{% if page.display_as == "financial" %}
+<a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
+  <div class="alltutcol">
+    <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}">
+      <div class="titlecenter">
+        <h5 class="centered"> {{page.name}} </h5>
+      </div>
+  </div>
+</a>
+<div class="{% cycle 'financial-clear: ' '', '', '', '', 'five-column-clear' %}"></div>
+{% endif %}
+{% endfor %}
+</div>
+{% endif %}
+
 {% if maps %}
 <hr>
 <h4 class="example-section-title" id="maps"><a class="no_underline plot-blue" href="#maps">Maps</a></h4>
