fix scientific anchor links

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -85,8 +85,8 @@
 
 {% if scientific %}
 <hr class="example-section-break">
-<h4 class="example-section-title" id="statistical">
-	<a class="no_underline plot-blue" href="#statistical">Scientific Charts</a>
+<h4 class="example-section-title" id="scientific">
+	<a class="no_underline plot-blue" href="#scientific">Scientific Charts</a>
 </h4>
 <div class="row">
 {% for page in languagelistimg %}
