include "charts" in the anchor links to be more descriptive

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -63,8 +63,8 @@
 
 {% if statistical %}
 <hr class="example-section-break">
-<h4 class="example-section-title" id="statistical">
-	<a class="no_underline plot-blue" href="#statistical">Statistical Charts</a>
+<h4 class="example-section-title" id="statistical-charts">
+	<a class="no_underline plot-blue" href="#statistical-charts">Statistical Charts</a>
 </h4>
 <div class="row">
 {% for page in languagelistimg %}
@@ -85,8 +85,8 @@
 
 {% if scientific %}
 <hr class="example-section-break">
-<h4 class="example-section-title" id="scientific">
-	<a class="no_underline plot-blue" href="#scientific">Scientific Charts</a>
+<h4 class="example-section-title" id="scientific-charts">
+	<a class="no_underline plot-blue" href="#scientific-charts">Scientific Charts</a>
 </h4>
 <div class="row">
 {% for page in languagelistimg %}
@@ -107,8 +107,8 @@
 
 {% if financial %}
 <hr class="example-section-break">
-<h4 class="example-section-title" id="financial">
-	<a class="no_underline plot-blue" href="#financial">Financial Charts</a>
+<h4 class="example-section-title" id="financial-charts">
+	<a class="no_underline plot-blue" href="#financial-charts">Financial Charts</a>
 </h4>
 <div class="row">
 {% for page in languagelistimg %}
