get header to work on js splash

--- a/all_static/css/js-splash.css
+++ b/all_static/css/js-splash.css
@@ -12,6 +12,10 @@
   color: white;
 }
 
+.hamburgerlink {
+  display: none;
+}
+
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
