--- a/_includes/header.html
+++ b/_includes/header.html
@@ -61,7 +61,7 @@
 
   <div class="hamburger">
     <a href='#popmenufull' onclick='return clickfullmenu();'>
-      <img src="http://i.imgur.com/o7Mxj6T.png" alt="Menu" id="hamburgerlink" onmouseover="this.src='http://i.imgur.com/gj2TtuI.png'" onmouseout="this.src='http://i.imgur.com/o7Mxj6T.png'">
+      <div id="harburger-menu"></div>
     </a>
 
   </div>
@@ -149,4 +149,27 @@
       chosenDiv.style.display = "none";
     }
   }
+  </script>
+
+  <script>
+  console.log('got this');
+    var hamburgerDiv = document.getElementById('harburger-menu');
+    var currentUrl = window.location.href;
+    var newImg = document.createElement('img');
+    if (currentUrl === 'https://plot.ly/javascript/' ) {
+        newImg.setAttribute('src', '/all_static/images/white-hamburger-bg-transparent.png');
+        newImg.setAttribute('alt', 'Menu');
+        newImg.setAttribute('id', 'hamburgerlink');
+        newImg.setAttribute('onmouseover', 'this.src="/all_static/images/blue-hamburger-bg-transparent.png"');
+        newImg.setAttribute('onmouseout', 'this.src="/all_static/images/white-hamburger-bg-transparent.png"');
+        hamburgerDiv.appendChild(newImg);
+    } else {
+        newImg.setAttribute('src', 'http://i.imgur.com/o7Mxj6T.png');
+        newImg.setAttribute('alt', 'Menu');
+        newImg.setAttribute('id', 'hamburgerlink');
+        newImg.setAttribute('onmouseover', 'this.src="http://i.imgur.com/gj2TtuI.png"');
+        newImg.setAttribute('onmouseout', 'this.src="http://i.imgur.com/o7Mxj6T.png"');
+        hamburgerDiv.appendChild(newImg);
+    }
+
   </script>
