scroll-y on pop header

--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -655,8 +655,6 @@ POP-UP MENU STYLING
   color: #447bdc;
 }
 
-
-
 #popmenufull{
   z-index: 99999;
   position: fixed;
@@ -670,6 +668,7 @@ POP-UP MENU STYLING
   left: 0px;
   text-align: center;
   vertical-align: middle;
+  overflow-y: scroll;
 }
 
 .popupheader{
@@ -678,15 +677,18 @@ POP-UP MENU STYLING
   clear: both;
   height: 80px;
 }
+
 .popupmenu{
   padding-top: 20px;
 }
+
 .close{
   float: right;
   height: 30px;
   width: 30px;
   margin-right: 40px;
-  margin-top: 20px;}
+  margin-top: 20px;
+}
 
 .sub-popmenu a{
   font-size: 20px;
