--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -13,6 +13,8 @@
             <a id="forklink" href="https://github.com/plotly/Julia-API"><i class="fa fa-github-alt"></i> Fork on GitHub</a>
         {% elsif page.language == 'nodejs' %}
             <a id="forklink" href="https://github.com/plotly/plotly-nodejs"><i class="fa fa-github-alt"></i> Fork on GitHub</a>
+        {% elsif page.language == 'r' %}
+            <a id="forklink" href="https://github.com/ropensci/plotly"><i class="fa fa-github-alt"></i> Fork on GitHub</a>
         {% else %}
             <a id="forklink" href="https://github.com/plotly"><i class="fa fa-github-alt"></i> Fork on GitHub</a>
         {% endif %}
