--- a/all_static/css/js-splash.css
+++ b/all_static/css/js-splash.css
@@ -202,7 +202,6 @@ a:hover {
 .image-link:hover {
   border: thin solid #447BDC;
   transition: border ease-in-out 0.3s;
-  border-radius: 5px;
 }
 
 .example-section-title > a {
@@ -254,6 +253,10 @@ there.
   top: 50%;
   position: absolute;
   transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
   left: 75%;
 }
 
@@ -263,6 +266,10 @@ there.
   top: 50%;
   position: absolute;
   transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
   left: 0%;
 }
 
