--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -13,7 +13,7 @@
             <a id="forklink" href="https://github.com/plotly/Julia-API"><i class="fa fa-github-alt"></i> Fork on GitHub</a>
         {% elsif page.language == 'nodejs' %}
             <a id="forklink" href="https://github.com/plotly/plotly-nodejs"><i class="fa fa-github-alt"></i> Fork on GitHub</a>
-        {% elsif page.language == 'r' %}
+        {% elsif page.language == 'r' or page.language == 'ggplot2' %}
             <a id="forklink" href="https://github.com/ropensci/plotly"><i class="fa fa-github-alt"></i> Fork on GitHub</a>
         {% else %}
             <a id="forklink" href="https://github.com/plotly"><i class="fa fa-github-alt"></i> Fork on GitHub</a>
