--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -366,7 +366,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 <div class="row">
 {% if page.language == 'python' or page.language == 'matplotlib' %}
 <p>Plotly is a web-connected service by default, but can also work entirely offline within the IPython Notebook.</p>
-{% elif page.language == 'matlab' %}
+{% elsif page.language == 'matlab' %}
 <p>Plotly is a web-connected service by default, but can also work entirely locally.</p>
 {% endif %}
 <div class="six columns">
