--- a/all_static/css/js-splash.css
+++ b/all_static/css/js-splash.css
@@ -394,3 +394,24 @@ there.
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
 
+/* Sponsor Styling */
+
+.sponsor{
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 400;
+  font-size: 1.5rem;
+  color: #8B8B8B;
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+
+
+
+
+
+
+
+
+
+
