Migrated thumbnails for Python docs to Plotly CDN.

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -49,7 +49,7 @@
 {% if page.display_as == "chart_type" %}
 <a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
   <div class="alltutcol">
-    <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}">
+    <img class="thumbnail" alt="{{page.name}}" src="{{site.imgurl}}{{page.thumbnail}}">
       <div class="titlecenter">
         <h5 class="centered"> {{page.name}} </h5>
       </div>
@@ -74,7 +74,7 @@
 			{% if page.display_as == "chart_events" %}
 				<a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
 					<div class="alltutcol">
-						<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+						<img class="thumbnail" alt="{{page.name}}" src="{{site.imgurl}}{{page.thumbnail}}" >
 						<div class="titlecenter">
 							<h5 class="centered"> {{page.name}} </h5>
 						</div>
@@ -101,7 +101,7 @@
 {% if page.display_as == "advanced_charts" %}
 <a href="/{{page.permalink}}">
 <div class="alltutcol">
-<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+<img class="thumbnail" alt="{{page.name}}" src="{{site.imgurl}}{{page.thumbnail}}" >
 <div class="titlecenter">
 <h5 class="centered"> {{page.name}} </h5>
 </div>
@@ -120,7 +120,7 @@
 {% if page.display_as == "maps" %}
 <a href="/{{page.permalink}}">
 <div class="alltutcol">
-<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+<img class="thumbnail" alt="{{page.name}}" src="{{site.imgurl}}{{page.thumbnail}}" >
 <div class="titlecenter">
 <h5 class="centered"> {{page.name}} </h5>
 </div>
@@ -147,7 +147,7 @@
 {% if page.display_as == "3d_charts" %}
 <a href="/{{page.permalink}}">
 <div class="alltutcol">
-<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+<img class="thumbnail" alt="{{page.name}}" src="{{site.imgurl}}{{page.thumbnail}}" >
 <div class="titlecenter">
 <h5 class="centered"> {{page.name}} </h5>
 </div>
@@ -166,7 +166,7 @@
 {% if page.display_as == "financial_analysis" %}
 <a href="/{{page.permalink}}">
 <div class="alltutcol">
-<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+<img class="thumbnail" alt="{{page.name}}" src="{{site.imgurl}}{{page.thumbnail}}" >
 <div class="titlecenter">
 <h5 class="centered"> {{page.name}} </h5>
 </div>
@@ -185,7 +185,7 @@
 {% if page.display_as == "multiple_axes" %}
 <a href="/{{page.permalink}}">
 <div class="alltutcol">
-<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+<img class="thumbnail" alt="{{page.name}}" src="{{site.imgurl}}{{page.thumbnail}}" >
 <div class="titlecenter">
 <h5 class="centered"> {{page.name}} </h5>
 </div>
@@ -203,7 +203,7 @@
 <div class="row">
 {% if page.language == "matlab" %}<a href="/matlab/streaming-tutorial/">{% elsif page.language == "python"%}<a href="/python/streaming-tutorial/">{% endif %}
 <div class="alltutcol">
-<img class="thumbnail" alt="Streaming" src="{{site.staticurl}}/images/streaming.gif" >
+<img class="thumbnail" alt="Streaming" src="{{site.imgurl}}thumbnail/streaming.gif" >
 <div class="titlecenter">
 <h5 class="centered"> Real-Time Streaming </h5>
 </div>
@@ -226,7 +226,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 {% if page.display_as == "chart_events" %}
 <a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
 <div class="alltutcol">
-<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+<img class="thumbnail" alt="{{page.name}}" src="{{site.imgurl}}{{page.thumbnail}}" >
 <div class="titlecenter">
 <h5 class="centered"> {{page.name}} </h5>
 </div>
