--- a/_includes/plotschema-reference.html
+++ b/_includes/plotschema-reference.html
@@ -1,28 +1,9 @@
 {% capture plotschemacontent %}
+
+{% for trace in site.data.plotschema.traces %}
+
 <div class="row">
-    <div class="four columns">
-        <div class="toc">
-            {% for trace in site.data.plotschema.traces %}
-                <a href="#{{trace[0]}}"><h4>{{trace[0]}}</h4></a>
-                {% assign attribute=trace[1].attributes %}
-                {% assign localparentlink=trace[0] %}
-                {% assign display_info = false %}
-                {% assign toc = true %}
-                {% assign block = "data" %}
-                {% include reference-block.html parentlink=localparentlink block=block %}
-                <hr>
-            {% endfor %}
-
-            <a href="#layout"><h4>layout</h4></a>
-            {% assign localparentlink="layout" %}
-            {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
-            {% assign block = "layout" %}
-            {% include reference-block.html parentlink=localparentlink block=block %}
-        </div>
-    </div>
-
     <div class="eight columns">
-    {% for trace in site.data.plotschema.traces %}
         <a id="{{ trace[0] }}" href="#{{ trace[0] }}"><h4>{{ trace[0] }}</h4></a>
         <div class="description">
             <!-- Ugh, wish I could keep `language` out of here -->
@@ -47,23 +28,50 @@
             {% endif %}
             <br><br>{{ trace[1].description }}<br><br>
         </div>
-
-        {% assign localparentlink=trace[0] %}
-        {% assign attribute=trace[1].attributes %}
-        {% assign display_info = true %}
-        {% assign toc = false %}
-        {% assign block = "data" %}
-        {% include reference-block.html parentlink=localparentlink block=block %}
-        <hr>
-    {% endfor %}
-
-    <a id="layout" href="#layout"><h4>layout</h4></a>
-    {% assign localparentlink="layout" %}
-    {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
-    {% assign block = "layout" %}
-    {% include reference-block.html parentlink=localparentlink block=block %}
     </div>
+
+    <div class="four columns">
+        <div class="toc">
+            {% for trace in site.data.plotschema.traces %}
+                <a href="#{{trace[0]}}"><h4>{{trace[0]}}</h4></a>
+                {% assign attribute=trace[1].attributes %}
+                {% assign localparentlink=trace[0] %}
+                {% assign display_info = false %}
+                {% assign toc = true %}
+                {% assign block = "data" %}
+                {% include reference-block.html parentlink=localparentlink block=block %}
+        </div>
+    </div>
+
+    {% assign localparentlink=trace[0] %}
+    {% assign attribute=trace[1].attributes %}
+    {% assign display_info = true %}
+    {% assign toc = false %}
+    {% assign block = "data" %}
+    {% include reference-block.html parentlink=localparentlink block=block %}
+        
 </div>
+<hr>
+
+{% endfor %}
+
+<div class="row">
+    <div class="eight columns">
+        <a id="layout" href="#layout"><h4>layout</h4></a>
+        {% assign localparentlink="layout" %}
+        {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
+        {% assign block = "layout" %}
+        {% include reference-block.html parentlink=localparentlink block=block %}
+    </div>
+    <div class="four columns">
+        <a id="layout" href="#layout"><h4>layout</h4></a>
+        {% assign localparentlink="layout" %}
+        {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
+        {% assign block = "layout" %}
+        {% include reference-block.html parentlink=localparentlink block=block %}
+    </div>        
+</div>
+
 {% endcapture %}
 {% capture curlyarray %}{% raw %}{array}{% endraw %}{% endcapture %}
 {% capture curlyarrays %}{% raw %}{arrays}{% endraw %}{% endcapture %}
