--- a/_layouts/langindex.html
+++ b/_layouts/langindex.html
@@ -11,14 +11,16 @@
 			{% include navigation-bar.html %}
 
 			<div class="sectionseparator_bg">
-
-				<div class="container">
+				{% if page_type == 'reference' %}
+					{% include reference-side-nav.html %}
+				{% endif %}
+				<div class="container" {% if page_type == 'reference' %}style="margin-left:240px;"{% endif %}>
 					{{ content }}
-
 				</div>
 			</div>
 		</div>
     {% include footer.html %}
-	</body>
+    
+    </body>
 
 </html>
