--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -1006,3 +1006,21 @@ SYNTAX HIGHLIGHTER OVERRIDES
 .hljs{
   background-color: rgb(244, 244, 248) !important;
 }
+
+/**********************
+FLOATING REFERENCE NAV
+**********************/
+
+#reference-side-nav{
+  position: fixed;
+  left: 0px;
+  top: 310px;
+  background: whitesmoke;
+  padding: 20px;
+}
+
+#reference-side-nav ul{
+  list-style: none;
+  list-style-type: none;
+  margin-top: none;
+}
