--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -809,6 +809,23 @@ LANGUAGE PAGES
   margin-bottom: 20px;
 }
 
+.btnrow-full-bleed{
+  background: whitesmoke;
+  padding: 50px;
+  margin-top: 80px;
+}
+
+.btnrow-full-bleed a.button{
+  color: #444;
+  font-size: 16px;
+  font-weight: 300; 
+}
+
+.btnrow-full-bleed a.button:hover{
+  background: none !important;
+  opacity: 0.5;
+}
+
 /**************
 TIP BOX
 **************/
