--- a/_layouts/langindex.html
+++ b/_layouts/langindex.html
@@ -11,10 +11,10 @@
 			{% include navigation-bar.html %}
 
 			<div class="sectionseparator_bg">
-				{% if page_type == 'reference' %}
+				{% if page.page_type == 'reference' %}
 					{% include reference-side-nav.html %}
 				{% endif %}
-				<div class="container" {% if page_type == 'reference' %}style="margin-left:240px;"{% endif %}>
+				<div class="container" {% if page.page_type == 'reference' %}style="margin-left:240px;"{% endif %}>
 					{{ content }}
 				</div>
 			</div>
