--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -811,14 +811,15 @@ LANGUAGE PAGES
 
 .btnrow-full-bleed{
   background: whitesmoke;
-  padding: 50px;
-  margin-top: 80px;
+  padding: 50px 0 50px 0;
+  margin: 100px 0 80px 0;
 }
 
 .btnrow-full-bleed a.button{
   color: #444;
   font-size: 16px;
   font-weight: 300; 
+  background: none !important;
 }
 
 .btnrow-full-bleed a.button:hover{
