--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -1040,5 +1040,6 @@ FLOATING REFERENCE NAV
 #reference-side-nav ul{
   list-style: none;
   list-style-type: none;
-  margin-top: none;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
