--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -1043,3 +1043,7 @@ FLOATING REFERENCE NAV
   margin-top: 0px;
   margin-bottom: 0px;
 }
+
+#reference-side-nav li{
+  margin-bottom: 0px !important;
+}
