--- a/all_static/css/reference.css
+++ b/all_static/css/reference.css
@@ -16,12 +16,8 @@ code {
     margin-bottom: 0;
 }
 
-.toc {
-    border-right: thin rgb(230,230,230) solid;
-}
-
 [tooltip] {
-    border-bottom: thin dotted grey;
+    border-bottom: thin dotted red;
     cursor: pointer;
 }
 
@@ -34,10 +30,11 @@ code {
     /* customizable */
     transition: all 0.0s ease;
     transition-delay: 0.15s;
-    padding: 5px;
+    padding: 10px;
     color: white;
     border-radius: 1grapx;
     box-shadow: 2px 2px 1px silver;
+    font-size: 14px;
     font-family: "Open sans",verdana,arial,sans-serif;
 }
 
