--- a/_includes/plotschema-reference.html
+++ b/_includes/plotschema-reference.html
@@ -55,11 +55,13 @@
 
 <div class="row">
     <div class="eight columns">
-        <a id="layout" href="#layout"><h4>layout</h4></a>
-        {% assign localparentlink="layout" %}
-        {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
-        {% assign block = "layout" %}
-        {% include reference-block.html parentlink=localparentlink block=block %}
+        {% for trace in site.data.plotschema.traces %}
+            <a id="layout" href="#layout"><h4>layout</h4></a>
+            {% assign localparentlink="layout" %}
+            {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
+            {% assign block = "layout" %}
+            {% include reference-block.html parentlink=localparentlink block=block %}
+        {% endfor %}
     </div>
     <div class="four columns">
         <a id="layout" href="#layout"><h4>layout</h4></a>
