--- a/_includes/plotschema-reference.html
+++ b/_includes/plotschema-reference.html
@@ -55,15 +55,25 @@
 
 <div class="row">
     <div class="eight columns">
-        {% for trace in site.data.plotschema.traces %}
-            <a id="layout" href="#layout"><h4>layout</h4></a>
-            {% assign localparentlink="layout" %}
-            {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
-            {% assign block = "layout" %}
-            {% include reference-block.html parentlink=localparentlink block=block %}
-        {% endfor %}
+        {% assign localparentlink=trace[0] %}
+        {% assign attribute=trace[1].attributes %}
+        {% assign display_info = true %}
+        {% assign toc = false %}
+        {% assign block = "data" %}
+        
+        <a id="layout" href="#layout"><h4>layout</h4></a>
+        {% assign localparentlink="layout" %}
+        {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
+        {% assign block = "layout" %}
+        {% include reference-block.html parentlink=localparentlink block=block %}
     </div>
     <div class="four columns">
+        {% assign attribute=trace[1].attributes %}
+        {% assign localparentlink=trace[0] %}
+        {% assign display_info = false %}
+        {% assign toc = true %}
+        {% assign block = "data" %}
+            
         <a id="layout" href="#layout"><h4>layout</h4></a>
         {% assign localparentlink="layout" %}
         {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
