--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -1034,7 +1034,9 @@ FLOATING REFERENCE NAV
   left: 0px;
   top: 310px;
   background: whitesmoke;
-  padding: 20px;
+  padding: 40px;
+  height: 100%;
+  border: thin solid #ddd;  
 }
 
 #reference-side-nav ul{
@@ -1046,4 +1048,9 @@ FLOATING REFERENCE NAV
 
 #reference-side-nav li{
   margin-bottom: 0px !important;
+  font-size: 12px;
+}
+
+#reference-side-nav li a{
+  color: #444 !important; 
 }
