--- a/_includes/reference-side-nav.html
+++ b/_includes/reference-side-nav.html
@@ -1,4 +1,5 @@
 <div id="reference-side-nav">
+  <b>PLOT OBJECTS</b>
   <ul>
     <li><a href="#scatter">Scatter</a></li>
     <li><a href="#bar">Bar</a></li>
