--- a/_layouts/langindex.html
+++ b/_layouts/langindex.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 	{% include head.html %}
-
 	<body>
 		<div class="allcontent">
 			{% include header.html %}
@@ -20,6 +19,11 @@
 			</div>
 		</div>
     {% include footer.html %}
+    
+    {% if page.page_type == 'reference' %}
+    	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+    	<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.xx.x/js/uikit.min.js"></script>
+    {% endif %}
     
     </body>
 
