--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -1052,5 +1052,11 @@ FLOATING REFERENCE NAV
 }
 
 #reference-side-nav li a{
-  color: #444 !important; 
+  color: #444;
+}
+
+.scrollspy-highlight{
+  font-weight: 14px;
+  color: #447bdc;
+  text-transform: uppercase;
 }
