--- a/_layouts/langindex.html
+++ b/_layouts/langindex.html
@@ -22,8 +22,7 @@
     
     {% if page.page_type == 'reference' %}
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
-    	<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.24.0/js/core/scrollspy.min.js"></script>
-    	<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.24.0/js/core/smooth-scroll.js"></script>
+    	<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.24.0/js/uikit.min.js"></script>
     {% endif %}
     
     </body>
