--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/modules.css">
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/state.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.xx.x/css/uikit.min.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.24.0/css/uikit.min.css" />
 
         {% if page.page_type == "ipython" %}
         <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/ipython_notebook.css">
