--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,16 +9,17 @@
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/fonts/font-awesome/css/font-awesome.min.css" />
         <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/plotly_icons.css" />
         <link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700" rel="stylesheet" type="text/css" />
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
-
-    	<!-- Stytlesheets -->
+    	<!-- Stylesheets -->
+    	{% if page.page_type == "reference" %}
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.24.0/css/uikit.min.css" />
+	{% endif %}
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/normalize.css">
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/base.css">
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/layout_block.css">
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/modules.css">
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/state.css">
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.24.0/css/uikit.min.css" />
 
         {% if page.page_type == "ipython" %}
         <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/ipython_notebook.css">
