--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -1056,7 +1056,6 @@ FLOATING REFERENCE NAV
 }
 
 .scrollspy-highlight{
-  font-weight: 14px;
-  color: #447bdc;
-  text-transform: uppercase;
+    background: #00a8e6 !important;
+    color: #fff !important;
 }
