--- a/_includes/reference-side-nav.html
+++ b/_includes/reference-side-nav.html
@@ -1,6 +1,6 @@
 <div id="reference-side-nav">
   <b>PLOT OBJECTS</b>
-  <ul class="uk-nav uk-nav-side" data-uk-scrollspy-nav="{closest:'li', smoothscroll:true}">
+  <ul class="uk-nav uk-nav-side" data-uk-scrollspy-nav="{closest:'li', cls:'scrollspy-highlight'}">
     <li><a href="#scatter">Scatter</a></li>
     <li><a href="#bar">Bar</a></li>
     <li><a href="#box">Box</a></li>  
