--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -1057,5 +1057,9 @@ FLOATING REFERENCE NAV
 
 .scrollspy-highlight{
     background: #00a8e6 !important;
-    color: #fff !important;
+    padding: 4px;
+}
+
+.scrollspy-highlight{
+  color: #fff !important;
 }
