--- a/_includes/reference-side-nav.html
+++ b/_includes/reference-side-nav.html
@@ -29,8 +29,8 @@
   		</ul>
   		<li><a href="#layout-geo">Geo Layout</a></li> 
   		<ul>
-          <li><a href="#layout-lonaxis">Longitude Axis</a></li>
-          <li><a href="#layout-lataxis">Latitude Axis</a></li> 
+          <li><a href="#layout-geo-lonaxis">Longitude Axis</a></li>
+          <li><a href="#layout-geo-lataxis">Latitude Axis</a></li> 
   		</ul>  
   		<li><a href="#layout-legend">Legend</a></li> 
   		<li><a href="#layout-annotations">Annotations</a></li> 
