Added Filled Chord Diagram, and treemap javascript example

--- a/_includes/plotlyjs_html.html
+++ b/_includes/plotlyjs_html.html
@@ -6,6 +6,10 @@
   &lt;!-- PlotlyFinance.js --&gt;
   &lt;script src="https://cdn.rawgit.com/etpinard/plotlyjs-finance/master/plotlyjs-finance.js"&gt;&lt;/script&gt;
   {% endif %}
+  {% if page.permalink contains "treemaps/" %}
+  &lt;!-- TreemapSquared.js --&gt;
+  &lt;script src="https://cdn.rawgit.com/imranghory/treemap-squared/master/min/treemap-squared-0.5.min.js"&gt;&lt;/script&gt;
+  {% endif %}
 &lt;/head&gt;
 &lt;body&gt;
   &lt;!-- Plotly chart will be drawn inside this DIV --&gt;
