--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -63,18 +63,22 @@
 </div>
 </footer>
 
+{% if page.layout == "user-guide" %}
 <!-- Mathjax -->
 <script type='text/x-mathjax-config'>
 MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']], processEscapes: true}});
 </script>
 <script type='text/javascript' src='//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML%2CSafe.js&#038;ver=4.1'></script>
+{% endif %}
 
 <!-- Image Hover Script -->
 <script src="{{site.staticurl}}/javascripts/imghover.js"></script>
 
+{% if page.layout == "user-guide" %}
 <!-- code highlighting -->
 <script src="{{site.staticurl}}/javascripts/codehighlight/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
+{% endif %}
 
 <!-- Google Analytics -->
 <script>
