--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -710,7 +710,7 @@ API SPLASH
 **************/
 
 .api-splash{
-  background-image:url('https://raw.githubusercontent.com/plotly/documentation/gh-pages/all_static/images/unemployment.png');
+  background-image:url('http://images.plot.ly/excel/plotlyjs/plotlyjs-banner-background.png');
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 100%;
