--- a/_includes/banner-image.html
+++ b/_includes/banner-image.html
@@ -1,13 +1,6 @@
-{% if page.language == "plotly_js" %}
+{% if page.language == "matlab" or page.language == "python" or page.language == "matplotlib" or page.language == "pandas" or page.language == "r" or page.language == "ggplot2" %}
 <div style="
-    	background-image: url({{site.staticurl}}/images/plotlyjs-background-1.png);
-    	height: 250px; 
-    	text-align: center;">
-	<div style="background-color: rgba(255,255,255,0.8); height: 100%; text-align: center;"></div>
-</div>
-{% elsif page.language == "matlab" or page.language == "python" or page.language == "matplotlib" or page.language == "pandas" or page.language == "r" or page.language == "ggplot2" %}
-<div style="
-    	background-image: url({{site.staticurl}}/images/banner-bar.png);
+    	background-image: url(http://images.plot.ly/background-images/banner-bar.png);
     	height: 170px; 
     	text-align: center;">
 	<div style="background-color: rgba(255,255,255,0.7); height: 100%; text-align: center;"></div>
