--- a/_includes/dashboard-industries-nav.html
+++ b/_includes/dashboard-industries-nav.html
@@ -17,12 +17,9 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-left">
+        <li><a href="http://dashboards.ly/" class="create-dashboard-cta">Create Dashboard</a></li>
         <li><a href="https://plot.ly/organize/home">Sign up for free</a></li>         
-        <li><a href="https://plot.ly/products/cloud/">Upgrade</a></li> 
-        {% if page.report_link %}
-          <li><a id="forklink" href="{{ page.report_link }}"><i class="fa fa-bar-chart"></i> Report View</a></li>
-        {% endif %}       
-        <li><a id="forklink" href="https://github.com/plotly/dashboards"><i class="fa fa-github-alt"></i> Code on GitHub</a></li>
+        <li><a href="https://plot.ly/products/cloud/">Pricing</a></li> 
       </ul>
     </div>
   </div>
