--- a/_includes/dashboard-industries-footer.html
+++ b/_includes/dashboard-industries-footer.html
@@ -1,7 +1,7 @@
     <hr>
 
     <p class="small text-muted">
-      Data science teams <a href="https://plot.ly/products/industries/">across industries</a> use Plotly to share their data and analyses.
+        <a href="http://dashboards.ly/">Create your own dashboards</a>.
     </p>
 
   </div>
