--- a/all_static/css/keen-dashboards.css
+++ b/all_static/css/keen-dashboards.css
@@ -162,3 +162,9 @@ div.plotly-intro-industries{
     font-weight: 200;
     letter-spacing: 0.1rem;
 }
+
+.create-dashboard-cta{
+    border: 1px solid #444;
+    border-radius: 2px;
+    padding: 4px;  
+}
