--- a/_includes/dashboard-industries-nav.html
+++ b/_includes/dashboard-industries-nav.html
@@ -17,7 +17,7 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-left">
-        <li><a href="http://dashboards.ly/" class="create-dashboard-cta">Create Dashboard</a></li>
+        <li><a href="http://dashboards.ly/"><span class="create-dashboard-cta">Create Dashboard</span></a></li>
         <li><a href="https://plot.ly/organize/home">Sign up for free</a></li>         
         <li><a href="https://plot.ly/products/cloud/">Pricing</a></li> 
       </ul>
