--- a/all_static/css/reference.css
+++ b/all_static/css/reference.css
@@ -16,6 +16,10 @@ code {
     margin-bottom: 0;
 }
 
+.inl-blk{
+    display: inline-block !important;
+}
+
 [tooltip] {
     border-bottom: thin dotted red;
     cursor: pointer;
