--- a/_includes/reference-side-nav.html
+++ b/_includes/reference-side-nav.html
@@ -9,7 +9,10 @@
     <li class="inl-blk"><a href="#histogram">Histogram</a></li><li class="inl-blk">&nbsp;|</li>
     <li class="inl-blk"><a href="#histogram2d">Histogram 2d</a></li>
     <br>
-    <li class="inl-blk"><a href="#pie">Pie</a></li><li class="inl-blk">&nbsp;|</li>  
+    <li class="inl-blk"><a href="#area">Area</a></li></li><li class="inl-blk">&nbsp;|</li> 
+    <li class="inl-blk"><a href="#pie">Pie</a>
+    <br>
+    <li class="inl-blk"><a href="#contour">Contour</a></li><li class="inl-blk">&nbsp;|</li> 
     <li class="inl-blk"><a href="#histogram2dcontour">Histogram 2d Contour</a></li>
     <br>
     <li class="inl-blk"><b>3D:</b></li>
@@ -21,8 +24,9 @@
     <li class="inl-blk"><a href="#scattergeo">Scatter Geo</a></li><li class="inl-blk">&nbsp;|</li> 
     <li class="inl-blk"><a href="#choropleth">Choropleth</a></li>
     <br>
-    <li class="inl-blk"><a href="#scattergl">WebGL Scatter</a></li><li class="inl-blk">&nbsp;|</li>   
-    <li class="inl-blk"><a href="#area">Area</a></li>   
+    <li class="inl-blk"><b>WebGL:</b></li>
+    <li class="inl-blk"><a href="#scattergl">Scatter</a></li>
+    <br>
     <br>
     <li><a href="#layout">Layout</a></li> 
   	<ul>
@@ -31,6 +35,7 @@
   		<li><a href="#layout-yaxis">Y Axis</a></li> 
   		<li><a href="#layout-scene">3d Scene</a></li> 
   		<ul>
+  		    <li><a href="#layout-scene-camera">Camera</a></li>
           <li><a href="#layout-scene-xaxis">X Axis</a></li>
           <li><a href="#layout-scene-yaxis">Y Axis</a></li> 
           <li><a href="#layout-scene-zaxis">Z Axis</a></li> 
