--- a/_includes/reference-side-nav.html
+++ b/_includes/reference-side-nav.html
@@ -42,6 +42,7 @@
   		</ul>
   		<li><a href="#layout-geo">Geo Layout</a></li> 
   		<ul>
+  		    <li><a href="#layout-geo-projection">Projection</a></li>
           <li><a href="#layout-geo-lonaxis">Longitude Axis</a></li>
           <li><a href="#layout-geo-lataxis">Latitude Axis</a></li> 
   		</ul>  
