Add clearing class

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -141,6 +141,7 @@
 		</div>
 	</div>
 </a>
+<div class="{% cycle 'maps-clear: ' '', '', '', '', 'five-column-clear' %}"></div>
 {% endif %}
 {% endfor %}
 </div>
@@ -162,6 +163,7 @@
 		</div>
 	</div>
 </a>
+<div class="{% cycle 'three-d-clear: ' '', '', '', '', 'five-column-clear' %}"></div>
 {% endif %}
 {% endfor %}
 </div>
@@ -181,6 +183,7 @@
 		</div>
 	</div>
 </a>
+<div class="{% cycle 'financial-clear: ' '', '', '', '', 'five-column-clear' %}"></div>
 {% endif %}
 {% endfor %}
 </div>
