Five column and three column fix

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -55,7 +55,8 @@
       </div>
   </div>
 </a>
-<div class="{% cycle 'basic-clear: ' '', '', '', '', 'five-column-clear' %}"></div>
+<div class="{% cycle 'basic-three-clear': '', '', 'three-column-clear' %}"></div>
+<div class="{% cycle 'basic-clear': '', '', '', '', 'five-column-clear' %}"></div>
 {% endif %}
 {% endfor %}
 </div>
@@ -77,7 +78,8 @@
       </div>
   </div>
 </a>
-<div class="{% cycle 'statistical-clear: ' '', '', '', '', 'five-column-clear' %}"></div>
+<div class="{% cycle 'statistical-three-clear': '', '', 'three-column-clear' %}"></div>
+<div class="{% cycle 'statistical-clear': '', '', '', '', 'five-column-clear' %}"></div>
 {% endif %}
 {% endfor %}
 </div>
@@ -99,7 +101,8 @@
       </div>
   </div>
 </a>
-<div class="{% cycle 'scientific-clear: ' '', '', '', '', 'five-column-clear' %}"></div>
+<div class="{% cycle 'scientific-three-clear': '', '', 'three-column-clear' %}"></div>
+<div class="{% cycle 'scientific-clear': '', '', '', '', 'five-column-clear' %}"></div>
 {% endif %}
 {% endfor %}
 </div>
@@ -121,7 +124,8 @@
       </div>
   </div>
 </a>
-<div class="{% cycle 'financial-clear: ' '', '', '', '', 'five-column-clear' %}"></div>
+<div class="{% cycle 'financial-three-clear': '', '', 'three-column-clear' %}"></div>
+<div class="{% cycle 'financial-clear': '', '', '', '', 'five-column-clear' %}"></div>
 {% endif %}
 {% endfor %}
 </div>
@@ -141,7 +145,8 @@
 		</div>
 	</div>
 </a>
-<div class="{% cycle 'maps-clear: ' '', '', '', '', 'five-column-clear' %}"></div>
+<div class="{% cycle 'maps-three-clear': '', '', 'three-column-clear' %}"></div>
+<div class="{% cycle 'maps-clear': '', '', '', '', 'five-column-clear' %}"></div>
 {% endif %}
 {% endfor %}
 </div>
@@ -163,7 +168,8 @@
 		</div>
 	</div>
 </a>
-<div class="{% cycle 'three-d-clear: ' '', '', '', '', 'five-column-clear' %}"></div>
+<div class="{% cycle 'three-d-three-clear': '', '', 'three-column-clear' %}"></div>
+<div class="{% cycle 'three-d-clear': '', '', '', '', 'five-column-clear' %}"></div>
 {% endif %}
 {% endfor %}
 </div>
@@ -183,7 +189,8 @@
 		</div>
 	</div>
 </a>
-<div class="{% cycle 'financial-clear: ' '', '', '', '', 'five-column-clear' %}"></div>
+<div class="{% cycle 'financial-three-clear': '', '', 'three-column-clear' %}"></div>
+<div class="{% cycle 'financial-clear': '', '', '', '', 'five-column-clear' %}"></div>
 {% endif %}
 {% endfor %}
 </div>
@@ -203,6 +210,7 @@
 		</div>
 	</div>
 </a>
+<div class="{% cycle 'group2-clear': '', '', 'three-column-clear' %}"></div>
 <div class="{% cycle 'group 2': '', '', 'three-column-clear', '', 'five-column-clear' %}"></div>
 {% endif %}
 {% endfor %}
