Added Sign Up, and Request Demo buttons

--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -393,6 +393,12 @@ BUTTONS
     white-space: nowrap;
 }
 
+.\--enterprise-quaternary {
+    background: None;
+    border: 1px solid #45A9FF;
+    color: #9ddcff;
+}
+
 .button a{
   text-decoration: none;}
 
@@ -433,10 +439,17 @@ BUTTONS
   color: white;
 }
 
+.\--enterprise-quaternary:hover {
+    background: #45A9FF;
+    color: #ffffff;
+}
+
 .secondary:hover {
   background: none repeat scroll 0 0 #69738a;
   color: white;
 }
+
+
 
 /***********************
 TUTORIAL HOME PAGE STYLING
